mule-user-guide/v/3.3/mule-sts-oauth-2.0-example-application.adoc
=  Mule STS Oauth 2.0示例应用程序

这个Mule应用程序示例表现为向外部使用者提供其API的Web服务提供者。

== 假设

本文档假定您熟悉 link:/mule-user-guide/v/3.3/essentials-of-using-mule-esb-3[骡子ESB]和 link:/mule-user-guide/v/3.3/mule-studio-essentials[Mule Studio界面]。为了增加对Mule Studio的熟悉度，请考虑完成一个或多个 link:/mule-user-guide/v/3.3/getting-started-with-mule-studio[Mule Studio教程]。

== 导入，然后运行应用程序

[NOTE]
====
*Two for One*

*Mule STS Oauth 2.0 Example Application*由两个应用程序组成：

* 充当Web服务*provider*（Tweetbook）
* 充当Web服务*consumer*（书店）。

要检查功能性示例，您必须导入并运行Tweetbook和Bookstore应用程序，前者在Mule Studio中，后者在Mule ESB Standalone中运行。

为了演示Oauth 2.0适用于Web服务提供者的功能，在本文档中，我们仅检查Tweetbook应用程序的详细信息。
====

=== 导入并运行书店

. 如果您的系统中尚未安装*Mule ESB Enterprise Standalone*，请下载 http://www.mulesoft.com/mule-esb-enterprise-30-day-trial[* Mule ESB 3.3企业试用版运行时*]。
. 从以下链接下载*Mule Bookstore*应用程序：+
http://s3.amazonaws.com/MuleEE/Examples/bookstore-oauth2-consumer.zip[* Mule书店*]
. 导航到您的下载文件夹，然后解压您下载的`bookstore-oauth2-consumer.zip`文件。
. 将解压后的文件夹`bookstore-oauth2-consumer`复制到`<MULE_HOME>/apps`
+
[TIP]
`<MULE_HOME>`是*MULE ESB*使用的MULE_HOME变量的值，通常是Mule ESB安装的根目录，例如`/opt/Mule/mule-standalone-3.3.1/`。

[TIP]
====
*Start Mule*

 需要更多详细信息？对于Unix / Linux：

link:/mule-management-console/v/3.3/quick-start-guide-to-mule-esb-server-and-the-management-console[启动Mule服务器]有不同的方法：

选项1：双击位于解压缩软件之下`/bin`目录下的`mule`文件

这将通过打开命令行窗口并将Mule "attached"作为前台进程运行到终端来启动Mule服务器。这种方法的优点是启动的进度和状态将回显到命令行窗口。这种方法的缺点是这个命令行窗口在Mule服务器停止之前不会接受任何其他命令。这意味着<<Shutting Down the Mule Server>>，您必须打开一个新的命令窗口。

选项2：使用命令行

可以从命令行运行Mule服务器，如下所示：`<MULE_HOME>/bin/mule start`

这将运行Mule作为后台进程。这种方法的优点是终端窗口可以关闭，并且进程将继续运行。这种方法的缺点是，为了查看启动状态，您需要打开一个单独的命令行窗口并导航到`<MULE_HOME>/logs`并执行以下命令：`tail mule_ee.log`

*Need more detail? For Windows:*


link:/mule-management-console/v/3.3/quick-start-guide-to-mule-esb-server-and-the-management-console[启动Mule服务器]有不同的方法：

* 选项1：双击位于解压缩软件包的位置下方的`\bin`目录中的`mule`文件。
* 选项2：使用命令行

在Windows系统上，通过运行`<MULE_HOME>\bin`转到`<MULE_HOME>\bin`，然后键入`mule`，然后按*enter*。或者，运行`mule.bat`启动服务器。
====

开始后，Mule每5秒轮询一次`apps`文件夹。当您将`bookstore-oauth2-consumer`应用程序复制到该文件夹​​时，Mule会自动检测它并进行部署。在命令行中，Mule会通知您它已经部署了该应用程序。

----
 ***            - - + APPLICATION + - -            * - - + STATUS + - - ** bookstore-oauth2-consumer-1                   * DEPLOYED           ** mmc                                           * DEPLOYED           ** default                                       * DEPLOYED           ** 00_mmc-agent                                  * DEPLOYED           ***INFO  2012-10-29 15:40:57,516 [WrapperListener_start_runner] org.mule.module.launcher.DeploymentService: +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ Mule is up and kicking (every 5000ms)                    +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
----

=== 导入并运行Tweetbook

. 从以下链接下载*Mule Tweetbook*应用程序：+
  http://s3.amazonaws.com/MuleEE/Examples/tweetbook-oauth2-provider.zip[* Tweetbook *]
. 导航到您的下载文件夹，然后解压缩您下载的`tweetbook-oauth2-provider.zip`文件。
. 推出Mule Studio。
. 在*File*菜单下，选择*Import...*
. 在*Import*向导中，展开*Mule*文件夹，然后选择*Mule Studio Project from External Location*，然后单击*Next*。
. 在*Project Root*字段中，使用省略号（。。。）按钮导航到您的下载文件夹，然后选择tweetbook-oauth2-provider文件夹。
. 点击*Finish*开始导入。 Studio打开`tweetbook-oauth2-provider`项目并在画布中显示应用程序。
. 在*Package Explorer*中，右键单击项目名称，然后选择*Run As*> *Mule Application*。
+
[WARNING]
====
Studio可能会显示一条良性警告，其内容如下：

[source, code, linenums]
----
Errors exist in required project(s):
 tweetbook-oauth2-provider
 Proceed with launch?
----
点击*OK*继续。 Studio应该没有问题地启动并运行Tweetbook应用程序。
====

.  Studio运行应用程序，在Studio控制台中显示其活动。

== 见证工作示例

在运行*Bookstore*和*Tweetbook*应用程序的情况下，请完成以下步骤，以体验示例应用程序的行为，就像书店用户一样。

. 要访问浏览器中的*Bookstore*网站，请转到以下URL：http：// localhost：8085 / bookstore +
 +
image:welcome_bookstore.png[welcome_bookstore] +

. 点击*Your Tweetbook Account*链接，使用Tweetbook登录。
. 书店在窗口中打开Tweetbook登录。 +
 +
image:login_tweetbook.png[login_tweetbook] +

. 在*Username*和*Password*字段中，输入以下登录凭据：+
* 用户名= `john`
* 密码= `doe`
+

[NOTE]
请注意，在此页面上，Tweetbook不仅会请求您的登录凭据，还会同时请求您以用户的身份与您的`PROFILE`和`BOOKSHELF`共享只读访问权限。 Tweetbook本可以要求用户登录，然后_Then_请求许可共享数据，但在这种情况下，Tweetbook将两个请求合并到一个用户活动中。

. 点击*Login and Authorize*。
.  Tweetbook将Bookstore应用程序访问权限授予您的个人资料和书架数据。书店导入数据，然后将您登录到Bookstore上的新用户帐户。然后，Bookstore显示您的Tweetbook书架的内容。 +
 +
image:logged_in_bookstore.png[logged_in_bookstore] +

== 关闭Mule服务器

要通过命令行阻止Mule ESB运行，请执行命令`<MULE_HOME>/bin/mule stop`

[WARNING]
*Note for Unix/Linux Users* +
 +
如果Mule进程连接到终端（作为前台进程运行），则必须在单独的命令行窗口中执行命令`<MULE_HOME>/bin/mule stop`。但是，如果Mule进程已从终端分离（如果您使用`<MULE_HOME>/bin/mule start`命令启动了Mule服务器，则可以从任何终端窗口执行命令`<MULE_HOME>/bin/mule stop `。

== 它是如何工作的

Web服务提供者是名为*Tweetbook*的Mule应用程序。 Tweetbook用户在他们的账户中保存了他们在虚拟图书馆中阅读的书籍列表，并且可以在读者的社交网络中与其他Tweetbook用户分享他们的图书馆和评论。

*Bookstore*是一个在线书籍零售商。希望购买图书并且是Tweetbook用户的最终用户可以选择使用其TweetBook帐户凭证创建书店帐户。如果用户决定使用他们的推特账户在书店中创建账户，Tweetbook将与书店共享用户的虚拟图书馆。用户可以在购买新书之前咨询他们的Tweetbook图书馆。

Tweetbook已将其API提供给Bookstore，并准备为用户的个人资料和虚拟书架提供只读访问权限。

下表介绍了此示例上下文中的OAuth实体。

[cols="2*"]
|===
|访问凭证 |登录凭据到Tweetbook
|资源所有者 |最终用户
|受保护的资源 |最终用户的帐户与Tweetbook
|服务提供商 | Tweetbook
| {消费者{1}}书店
| {令牌{1}}令牌
|范围 |只读访问虚拟图书馆中最终用户的个人资料和图书清单
|===

以下部分描述了服务提供商和消费者之间发生的OAuth舞蹈，并提供了有关Tweetbook Mule应用程序如何配置为充当OAuth服务提供商的洞察。

===  OAuth舞蹈

. 在他们跳舞之前，消费者和服务提供商必须设置以下参数：+
* 服务提供者必须将自己定义为Oauth 2.0服务提供者。
* 消费者必须向提供商注册其客户ID。 （服务提供者将注册用户的ID存储在其对象存储中。）+
 +
image:pre_reqs.png[pre_reqs] +

. 在Bookstore的网站上，最终用户（一位TweetBook账户持有人）决定使用他的Tweetbook账户凭证创建一个新账户。用户点击书店为此提供的“用Tweetbook登录！”链接。
.  Tweetbook和Bookstore使用<<Authorization Grant Type>>来执行OAuth舞蹈。书店指示用户登录到他的Tweetbook帐户的URL。在这一步中，书店调用Tweetbook的授权服务器并提供其客户ID（因此Tweetbook知道哪个消费者要跳舞）。用户输入他的Tweetbook登录凭证。当他点击*Login and Authorize*时，他不仅访问了他的TweetBook帐户，还授权Tweetbook与Bookstore分享其个人资料和书架的只读访问权限。 Tweetbook向Bookstore发送授权码。 +
 +
image:heres_my_clientID.png[heres_my_clientID] +

. 书店再次调用Tweetbook的授权服务器来请求访问受保护资源（用户的Tweetbook帐户）的权限。书店提供授权码，客户端ID和客户端密码。 +
 +
image:ask_permission.png[请求许可] +

.  Tweetbook通过提供令牌来授予访问受保护资源的权限。在令牌中，它定义了书店可以访问的范围（即特定数据）。在这种情况下，作用域是对用户配置文件和虚拟书架的只读访问。 +
 +
image:heres_your_token.png[heres_your_token] +

. 书店调用Tweetbook的资源服务器来请求用户的受保护资源。它提供令牌Tweetbook作为其身份证明和获取资源的授权。 +
 +
image:ask_assets.png[ask_assets] +

.  Tweetbook接受令牌，然后向Bookstore提供用户的个人资料和书架信息。 +
 +
image:heres_the_asset.png[heres_the_asset] +

. 书店允许用户输入他的新帐户，其虚拟书架预先填入他的Tweetbook帐户中的书籍列表。 +
 +
image:logged_in.png[登录] +

=== 授权授予类型

消费者可以通过四种方式获得授权以与OAuth服务提供商共舞。

. 授权码
. 隐
. 资源所有者密码凭据
. 客户端凭证

此示例应用程序使用授权代码授权类型，如上所述，授权代码授予类型涉及授权共享受保护资源的多步过程。对于服务提供者来说，这种授予类型涉及使用授权服务器（负责确认和授予访问受保护资源的权限）和资源服务器（负责提供对受保护资源的访问）。消费者必须要求服务提供商征求受保护资源的许可 - 就像求婚者允许伴侣允许女性跳舞一样。如果伴侣（授权服务器）准许请求，则求婚者（消费者）然后可以要求女性（资源服务器）跳舞。

有关其他类型授权许可的更多信息，请参阅 link:/mule-user-guide/v/3.3/authorization-grant-types[授权授予类型]。

Tweetbook中的==  Oauth 2.0配置

本节在Mule ESB的图形用户界面（GUI）*Mule Studio*的上下文中描述该示例的详细信息。 XML配置遵循可扩展部分中的Studio界面截图。

Tweetbook应用程序使用Mule安全令牌服务将Oauth 2.0应用于其公开的API。通过在Web服务流中包含OAuth2消息处理器，Tweetbook将自己定义为OAuth2服务提供商，并使Mule能够与消费者一起执行OAuth舞蹈。 +
 +
  image:tweetbook-oauth2-provider.png[tweetbook-的oauth2提供商]

.XML

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns:http="http://www.mulesoft.org/schema/mule/http"
  xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns:oauth2-provider="http://www.mulesoft.org/schema/mule/oauth2-provider"
    xmlns:spring="http://www.springframework.org/schema/beans"
    xmlns:util="http://www.springframework.org/schema/util"
    xmlns:context="http://www.springframework.org/schema/context"
    xmlns:mule-ss="http://www.mulesoft.org/schema/mule/spring-security"
    xmlns:ss="http://www.springframework.org/schema/security"
    xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/oauth2-provider http://www.mulesoft.org/schema/mule/oauth2-provider/1.0/mule-oauth2-provider.xsd
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util-current.xsd
http://www.mulesoft.org/schema/mule/spring-security http://www.mulesoft.org/schema/mule/spring-security/current/mule-spring-security.xsd
http://www.springframework.org/schema/security http://www.springframework.org/schema/security/spring-security.xsd " version="EE-3.3.1">
 
    <context:property-placeholder location="bookstore.properties" />
    <spring:beans>
        <ss:authentication-manager id="resourceOwnerAuthenticationManager"> 
            <ss:authentication-provider>
                <ss:user-service id="resourceOwnerUserService">
                    <ss:user name="john" password="doe" authorities="RESOURCE_OWNER"/>
                </ss:user-service>
            </ss:authentication-provider>
        </ss:authentication-manager>
    </spring:beans>
 
    <mule-ss:security-manager>
        <mule-ss:delegate-security-provider name="resourceOwnerSecurityProvider" delegate-ref="resourceOwnerAuthenticationManager"/>
    </mule-ss:security-manager>
 
    <oauth2-provider:config
        name="oauth2Provider"
        providerName="TweetBook"
         
        port="8084"
        authorizationEndpointPath="tweetbook/api/authorize"
        accessTokenEndpointPath="tweetbook/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_PROFILE WRITE_PROFILE READ_BOOKSHELF WRITE_BOOKSHELF" doc:name="Oauth2 Provider">
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="${client_id}" secret="${client_secret}"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://localhost*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>AUTHORIZATION_CODE</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_PROFILE</oauth2-provider:scope>
                        <oauth2-provider:scope>READ_BOOKSHELF</oauth2-provider:scope>
                        <oauth2-provider:scope>WRITE_BOOKSHELF</oauth2-provider:scope>
                        <oauth2-provider:scope>WRITE_PROFILE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
 
    <flow name="publicProfile" doc:name="publicProfile">
        <http:inbound-endpoint address="http://localhost:8084/tweetbook/api/profile" exchange-pattern="request-response" doc:name="Profile API"/>
        <oauth2-provider:validate scopes="READ_PROFILE" config-ref="oauth2Provider" doc:name="Oauth2 Provider"/>
        <component class="org.mule.security.examples.oauth2.ProfileLookupComponent" doc:name="Profile Lookup"/>
    </flow>
 
    <flow name="publicBookshelf" doc:name="publicBookshelf">
        <http:inbound-endpoint address="http://localhost:8084/tweetbook/api/bookshelf" exchange-pattern="request-response" doc:name="Bookshelf API"/>
        <oauth2-provider:validate scopes="READ_BOOKSHELF" config-ref="oauth2Provider" doc:name="Oauth2 Provider"/>
        <set-payload value="The Lord of the Rings,The Hitchhiker's Guide to the Galaxy" doc:name="Retrieve Bookshelf"/>
    </flow>
</mule>
----


== 相关材料

* 有关Mule中Oauth 2.0的更多信息，请参阅 link:/mule-user-guide/v/3.8/mule-secure-token-service[Mule安全令牌服务]。
